2014-08-10  Holger Seelig  <holger.seelig@yahoo.de>

	* ViewpointList.xml:
	* ViewpointList.cpp: 

2014-08-10  Holger Seelig  <holger.seelig@yahoo.de>

	* run.pl:
	* titania:
	* Makefile.am:
	* style.css:
	* DialogFactory.h:
	* BrowserWindow.h:
	* X3DUserInterface.h:
	* X3DUserInterface.cpp:
	* BrowserWindow.cpp:
	* ViewpointList.xml:
	* BrowserWindow.xml:
	* LightEditor.xml:
	* TextureEditor.xml:
	* LightEditor.cpp:
	* ViewpointEditor.xml:
	* ViewpointList.h:
	* ViewpointList.cpp:
	* X3DLightEditorInterface.h:
	* ViewpointEditor.h:
	* X3DViewpointListInterface.h:
	* X3DBrowserWindowInterface.h:
	* X3DLightEditorInterface.cpp:
	* X3DTextureEditorInterface.h:
	* ViewpointEditor.cpp:
	* X3DViewpointEditorInterface.h:
	* X3DTextureEditorInterface.cpp:
	* X3DBrowserWindowInterface.cpp:
	* X3DViewpointListInterface.cpp:
	* X3DTextureNodeEditor.cpp:
	* X3DViewpointEditorInterface.cpp:
	* X3DTextureTransformNodeEditor.cpp: 

2014-08-10  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.h:
	* OutlineEditor.cpp:
	* X3DOutlineTreeView.cpp:
	* OutlineEditorDatabase.h: 

2014-08-10  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DOutlineTreeView.h:
	* X3DOutlineTreeView.cpp: 

2014-08-10  Holger Seelig  <holger.seelig@yahoo.de>

	* Sphere.svg:
	* Dragon.svg:
	* X3DUserInterface.cpp: 

2014-08-09  Holger Seelig  <holger.seelig@yahoo.de>

	* HistoryView.xml:
	* Light.svg:
	* BrowserWindow.cpp:
	* BrowserWindow.xml:
	* ViewpointList.xml:
	* Geometry.svg:
	* FlyViewer.svg:
	* Viewpoint.svg:
	* Straighten.svg:
	* WalkViewer.svg:
	* PlaneViewer.svg:
	* ExamineViewer.svg:
	* OutlineEditor.svg:
	* Prototype.svg:
	* ExternProto.svg:
	* Prototype.16.svg:
	* Prototype.96.svg:
	* ExternProto.16.svg:
	* X3DTextViewEditable.cpp: 

2014-08-09  Holger Seelig  <holger.seelig@yahoo.de>

	* style.css:
	* Console.xml:
	* BrowserWindow.cpp:
	* BrowserWindow.xml:
	* Geometry.svg:
	* Viewpoint.svg:
	* FlyViewer.svg:
	* WalkViewer.svg:
	* PlaneViewer.svg:
	* OutlineEditor.svg: