@@ -1,5 +1,11 @@
 2014-08-10  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* BrowserWindow.xml:
+	* ViewpointList.xml:
+	* OutlineTreeObserver.cpp: 
+
+2014-08-10  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* ViewpointList.xml:
 	* ViewpointList.cpp: 
 
